# semantic-dot-clash

./: .gitignore  README.md  pyproject.toml  system_prompt.txt
data/: Card_Overviews.html  all_archetypes.txt  all_archetypes2.txt  all_cards_ranked_2.txt  all_cards_ranked_transcript.txt  archetypes_seed.json  cards_with_descriptions.json  cards_with_vibes.json  my_cards.json
scripts/: add_hero_evo_fields.py  create_tables.py  fetch_cards.py  generate_archetype_embeddings.py  generate_card_embeddings.py  generate_card_vibes.py  load_archetypes_to_lance.py  load_cards_to_lance.py  patch_card_vibes.py  scrape_card_descriptions.py  test_tools.py
src/semantic_dot_clash/: __init__.py  __main__.py  agent.py  chat_session.py  memory.py  tools.py  web_api.py
src/semantic_dot_clash/tables/: README.md  __init__.py  lance_schema.py  staging.py
tests/: test_agent_archetype_tools.py  test_chat_sessions.py
web/: package.json  tailwind.config.ts  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/landing/: chat-overlay-shell.tsx  clash-landing-scene.tsx  grain-canvas.tsx  title-overlay.tsx
web/components/ui/: badge.tsx  button.tsx  textarea.tsx
web/copystyle/pilgrimlabs.com/: index.html  robots.txt  vid.mp4.html
web/copystyle/pilgrimlabs.com/assets/: main.css  main.js
