[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "semantic-dot-clash"
version = "0.1.0"
description = ""
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Cole Dumanski"}
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "lancedb>=0.15",
    "pyarrow>=14.0",
    "pandas>=2.0",
    "dotenv",
    "requests",
    "beautifulsoup4>=4.12",
    "fastapi>=0.110",
    "openai>=1.0",
    "transformers>=4.36",
    "torch>=2.0",
    "pillow>=10.0",
    "numpy>=1.24",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",

]

[project.urls]
Homepage = "https://github.com/coledumanski/semantic-dot-clash"
Repository = "https://github.com/coledumanski/semantic-dot-clash"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
